test: ProspectEvaluationJobInitiatedServiceTest::accept